--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}" />
+  <link rel="icon" href="{% static '/images/favicon.ico' %}" />
   <title>Kite Human Resource Management System</title>
 
   {% if debug %}
