--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-{% load render_vite_bundle %}
+{# {% load render_vite_bundle %} #}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -32,7 +32,9 @@
   {% if debug %}
   <script type="module" src="http://localhost:3000/main.tsx"></script>
   {% else %}
-  {% render_vite_bundle %}
+  {# {% render_vite_bundle %} #}
+  <link rel="stylesheet" href="{% static '/assets/index.5ed30449.css' %}" />
+  <script type="module" crossorigin src="{% static '/assets/index.960007aa.js' %}"></script>
   {% endif %}
 </body>
 
