Added index.css and index.js and updated somecomponents

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -10,9 +10,9 @@
 		<script
 			type="module"
 			crossorigin
-			src="{% static '/assets/index.960007aa.js' %}"
+			src="{% static '/assets/index.js' %}"
 		></script>
-		<link rel="stylesheet" href="{% static '/assets/index.5ed30449.css' %}" />
+		<link rel="stylesheet" href="{% static '/assets/index.css' %}" />
 	</head>
 	<body>
 		<div id="root"></div>
